--- a/css/allstyles.css
+++ b/css/allstyles.css
@@ -220,7 +220,7 @@ body.dark .sidebar li a:hover .text {
 .active {
   border-radius: 8px;
   border-right: 2px solid;
-  border-bottom: 2px solid;
+  border-left: 2px solid;
   border-color: yellowgreen;
 }
 
